feat: add footer

--- a/backend/frontend/admin.html
+++ b/backend/frontend/admin.html
@@ -63,6 +63,9 @@
         </form>
     </section>
 
+    <footer>
+        <p>&copy; 2024 Task Master</p>
+    </footer>
 <script src="admin.js"></script>
 </body>
 </html>
