--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Task Manager</title>
+    <title>Task Master</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to Task Manager</h1>
+        <h1>Welcome to Task Master</h1>
         <nav>
             <a href="login.html">Login</a>
             <a href="register.html">Register</a>
@@ -18,7 +18,7 @@
         <h2>Your tasks are waiting!</h2>
     </main>
     <footer>
-        <p>&copy; 2023 Task Manager</p>
+        <p>&copy; 2024 Task Master</p>
     </footer>
 </body>
 </html>
