--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Login - Task Manager</title>
+    <title>Login - Task Master</title>
 </head>
 <body>
     <header>
-        <h1>Login to Task Manager</h1>
+        <h1>Login to Task Master</h1>
     </header>
     <main>
         <form id="login-form">
@@ -19,7 +19,7 @@
         <p>Don't have an account? <a href="register.html">Register here</a></p>
     </main>
     <footer>
-        <p>&copy; 2023 Task Manager</p>
+        <p>&copy; 2024 Task Master</p>
     </footer>
 
     <script src="auth.js"></script>
