--- a/backend/frontend/dashboard.html
+++ b/backend/frontend/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>User Dashboard - Task Manager</title>
+    <title>User Dashboard - Task Master</title>
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Task Manager</p>
+        <p>&copy; 2024 Task Master</p>
     </footer>
 
     <script src="index.js"></script> <!-- Load tasks -->
