--- a/backend/frontend/register.html
+++ b/backend/frontend/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Register - Task Manager</title>
+    <title>Register - Task Master</title>
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
         <p>Already have an account? <a href="login.html">Login here</a></p>
     </main>
     <footer>
-        <p>&copy; 2023 Task Manager</p>
+        <p>&copy; 2024 Task Master</p>
     </footer>
 
     <script src="reg.js"></script>
